examples/inventory-route-bluegreen-https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: inventory
spec:
  parentRefs:
  - name: my-hotel
    sectionName: http
  - name: my-hotel
    sectionName: https
  rules:
  - backendRefs:
    - name: inventory-ver1
      kind: Service
      port: 8090
      weight: 10
    - name: inventory-ver2
      kind: ServiceImport
      weight: 90
